codepkg/objects/Project_Role__c.object
<CustomObject>
    <description>It is a junction object between Project object and Contact object.</description>
    <fields>
        <fullName>AccountContactJunction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a lookup field to Contact Role object, which is a junction object between Account and Contact.</description>
        <label>Contact Role</label>
        <referenceTo>AccountContactRole__c</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>This field defines what type of contact this particular person is.</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Signing_Authority__c</fullName>
        <label>Has Signing Authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Mailing_Contact__c</fullName>
        <label>Is Mailing Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Assistance</fullName>
                </value>
                <value>
                    <fullName>Hazard Mitigation Assistance</fullName>
                </value>
                <value>
                    <fullName>FMAG</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>IA - (Parent)</fullName>
                </value>
                <value>
                    <fullName>ISP - (Parent)</fullName>
                </value>
                <value>
                    <fullName>NEHRP - (Parent)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It Stores the id of the project record for this project role.</description>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Role_Global_List__c</fullName>
        <description>Shows list of Roles related to Project Role</description>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Role_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sharing_Batch_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sharing Batch Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subrecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subrecipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSendInvitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Send Invitation</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Role_Global_List__c</columns>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>AccountContactJunction__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Has_Signing_Authority__c</columns>
        <columns>Is_Mailing_Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRN-{000000}</displayFormat>
        <label>Project Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>